--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-Hello World
+<!DOCTYPE html>
+<html lang="ko-KR">
+
+<head>
+  <title>What is HTML?</title>
+</head>
+
+<body>
+  <h1>What is HTML?</h1>
+  <p>HTML is the standard markup language for creating Web pages.</p>
+  <ul>
+    <li>HTML stands for Hyper Text Markup Language</li>
+    <li>HTML describes the structure of a Web page</li>
+    <li>HTML consists of a series of elements</li>
+    <li>HTML elements tell the browser how to display the content</li>
+    <li>HTML elements are represented by tags</li>
+    <li>HTML tags label pieces of content such as "heading", "paragraph", "table", and so on</li>
+    <li>Browsers do not display the HTML tags, but use them to render the content of the page</li>
+  </ul>
+
+  <h2>HTML Attributes</h2>
+  <ul>
+    <li>All HTML elements can have attributes</li>
+    <li>Attributes provide additional information about an element</li>
+    <li>Attributes are always specified in the start tag</li>
+    <li>Attributes usually come in name/value pairs like: name="value"</li>
+  </ul>
+
+  <p><a href="https://www.w3schools.com">
+      HTML links are defined with the &lt;a&gt; tag.<br>
+      The link address is specified in the href attribute.</a></p>
+
+  <p><img src="images/w3certified_logo_250.png" alt="w3certified_logo" width="250" height="85"><br>
+    HTML images are defined with the &lt;img&gt; tag.<br>
+    The filename of the image source is specified in the src attribute.</p>
+
+  <p style="color:red">
+    The style attribute is used to specify the styling of an element,
+    like color, font, size etc.</p>
+
+  <p title="Tooltip">
+    Here, a title attribute is added to the &lt;p&gt element.<br>
+    The value of the title attribute will be displayed as a tooltip
+    when you mouse over the paragraph.</p>
+
+  <button>This is a Button sample.</button>
+  <p>&lt;br&gt; is an empty element without a closing tag
+    (the &lt;br&gt; tag defines a line break)</p>
+
+  <h2>HTML Attributes Summary</h2>
+  <ol>
+    <li>All HTML elements can have attributes</li>
+    <li>The title attribute provides additional "tool-tip" information</li>
+    <li>The href attribute provides address information for links</li>
+    <li>The width and height attributes provide size information for images</li>
+    <li>The alt attribute provides text for screen readers</li>
+  </ol>
+
+</body>
+
+</html>
