--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
-<html lang="ko-KR">
+<html lang="ko">
 
 <head>
-  <title>What is HTML?</title>
+  <title>dapro379.github.io</title>
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400" rel="stylesheet">
+  <style>
+    body {
+      font-family: "Nanum Gothic", d2coding,
+        Menlo, Consolas, DejaVu Sans Mono, monospace;
+      font-size: 20px;
+      line-height: 40px;
+      margin-left: 20px;
+    }
+  </style>
 </head>
 
 <body>
