--- a/index.html
+++ b/index.html
@@ -14,29 +14,32 @@
       font-size: 20px;
       line-height: 40px;
       margin-left: 40px;
+      /* background-color: powderblue; */
     }
   </style>
 </head>
 
 <body>
-  <h1>What is HTML?</h1>
+  <h1 style="text-align:center;">dapro379.github.io</h1>
+  <h2>What is HTML?</h2>
   <p>HTML is the standard markup language for creating Web pages.</p>
   <ul>
-    <li>HTML stands for Hyper Text Markup Language</li>
+    <li style="font-weight: bold;">HTML stands for Hyper Text Markup Language</li>
     <li>HTML describes the structure of a Web page</li>
-    <li>HTML consists of a series of elements</li>
+    <li style="font-weight: bold;">HTML consists of a series of elements</li>
     <li>HTML elements tell the browser how to display the content</li>
-    <li>HTML elements are represented by tags</li>
+    <li style="font-weight: bold;">HTML elements are represented by tags</li>
     <li>HTML tags label pieces of content such as "heading", "paragraph", "table", and so on</li>
     <li>Browsers do not display the HTML tags, but use them to render the content of the page</li>
   </ul>
 
   <h2>HTML Attributes</h2>
   <ul>
-    <li>All HTML elements can have attributes</li>
+    <li style="color: blue;">All HTML elements can have attributes</li>
     <li>Attributes provide additional information about an element</li>
     <li>Attributes are always specified in the start tag</li>
-    <li>Attributes usually come in name/value pairs like: name="value"</li>
+    <li style="color: blue;">Attributes usually come in name/value pairs
+      <span style="font-weight: bold;">like: name="value"</span></li>
   </ul>
 
   <p><a href="https://www.w3schools.com">
@@ -44,21 +47,26 @@
       The link address is specified in the href attribute.</a></p>
 
   <p><img src="images/w3certified_logo_250.png" alt="w3certified_logo" width="250" height="85"><br>
-    HTML images are defined with the &lt;img&gt; tag.<br>
+    HTML images are defined with the
+    <span style="color: red;">&lt;img&gt;</span> tag.<br>
     The filename of the image source is specified in the src attribute.</p>
 
-  <p style="color:red">
-    The style attribute is used to specify the styling of an element,
+  <p>The style attribute is used to specify the styling of an element,
     like color, font, size etc.</p>
 
   <p title="Tooltip">
-    Here, a title attribute is added to the &lt;p&gt element.<br>
+    Here, a title attribute is added to the &lt;p&gt; element.<br>
     The value of the title attribute will be displayed as a tooltip
     when you mouse over the paragraph.</p>
 
   <button>This is a Button sample.</button>
   <p>&lt;br&gt; is an empty element without a closing tag
-    (the &lt;br&gt; tag defines a line break)</p>
+    (the &lt;br&gt; tag defines a line break)<br>
+    &lt;hr&gt; tag defines a thematic break in an HTML page,
+    and is most often displayed as a horizontal rule.<br>
+    The &lt;hr&gt; element is used to separate content
+    (or define a change) in an HTML page</p>
+  <hr>
 
   <h2>HTML Attributes Summary</h2>
   <ol>
