Update HTML Formatting index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <body>
   <h1 style="text-align:center;">dapro379.github.io</h1>
+
   <h2>What is HTML?</h2>
   <p>HTML is the standard markup language for creating Web pages.</p>
   <ul>
@@ -60,22 +61,28 @@
     when you mouse over the paragraph.</p>
 
   <button>This is a Button sample.</button>
+
   <p>&lt;br&gt; is an empty element without a closing tag
     (the &lt;br&gt; tag defines a line break)<br>
     &lt;hr&gt; tag defines a thematic break in an HTML page,
     and is most often displayed as a horizontal rule.<br>
-    The &lt;hr&gt; element is used to separate content
-    (or define a change) in an HTML page</p>
+    The <span style="color: red;"><b>&lt;hr&gt;</b></span> element is
+    used to separate content (or define a change) in an HTML page</p>
   <hr>
 
-  <h2>HTML Attributes Summary</h2>
-  <ol>
-    <li>All HTML elements can have attributes</li>
-    <li>The title attribute provides additional "tool-tip" information</li>
-    <li>The href attribute provides address information for links</li>
-    <li>The width and height attributes provide size information for images</li>
-    <li>The alt attribute provides text for screen readers</li>
-  </ol>
+  <h2>HTML Formatting Elements</h2>
+  <ul>
+    <li><b>&lt;b&gt; - Bold text</b>
+    <li><strong>&lt;strong&gt; - Important text</strong>
+    <li><i>&lt;i&gt; - Italic text</i>
+    <li><em>&lt;em&gt; - Emphasized text</em>
+    <li><mark>&lt;mark&gt; - Marked text</mark>
+    <li><small>&lt;small&gt; - Small text</small>
+    <li><del>&lt;del&gt; - Deleted text</del>
+    <li><ins>&lt;ins&gt; - Inserted text</ins>
+    <li><sub>&lt;sub&gt; - Subscript text</sub>
+    <li><sup>&lt;sup&gt; - Superscript text</sup>
+  </ul>
 
 </body>
 
