사이트의 목적

--- a/index.html
+++ b/index.html
@@ -1,150 +1,13 @@
 <!DOCTYPE html>
-<html lang="ko" dir="ltr">
-
+<html lang="ko">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>dapro379.github.io</title>
-  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400" rel="stylesheet">
-  <style>
-    body {
-      font-family: "Nanum Gothic", d2coding,
-        Menlo, Consolas, DejaVu Sans Mono, monospace;
-      /* font-size: 20px;
-      line-height: 40px;
-      margin-left: 40px;
-      background-color: powderblue; */
-    }
-
-    /* address 태그 브라우저 기본값 */
-    address {
-      display: block;
-      font-style: italic;
-    }
-  </style>
+  <title>Document</title>
 </head>
-
 <body>
-  <h1 style="text-align:center;">dapro379.github.io</h1>
-
-  <h2>What is HTML?</h2>
-  <p>HTML is the standard markup language for creating Web pages.</p>
-  <ul>
-    <li style="font-weight: bold;">HTML stands for Hyper Text Markup Language</li>
-    <li>HTML describes the structure of a Web page</li>
-    <li style="font-weight: bold;">HTML consists of a series of elements</li>
-    <li>HTML elements tell the browser how to display the content</li>
-    <li style="font-weight: bold;">HTML elements are represented by tags</li>
-    <li>HTML tags label pieces of content such as "heading", "paragraph", "table", and so on</li>
-    <li>Browsers do not display the HTML tags, but use them to render the content of the page</li>
-  </ul>
-  <hr>
-
-  <h2>HTML Attributes</h2>
-  <ul>
-    <li style="color: blue;">All HTML elements can have attributes</li>
-    <li>Attributes provide additional information about an element</li>
-    <li>Attributes are always specified in the start tag</li>
-    <li style="color: blue;">Attributes usually come in name/value pairs
-      <span style="font-weight: bold;">like: name="value"</span></li>
-  </ul>
-
-  <p><a href="https://www.w3schools.com">
-      HTML links are defined with the &lt;a&gt; tag.<br>
-      The link address is specified in the href attribute.</a></p>
-
-  <p><img src="images/w3certified_logo_250.png" alt="w3certified_logo" width="250" height="85"><br>
-    HTML images are defined with the
-    <span style="color: red;">&lt;img&gt;</span> tag.<br>
-    The filename of the image source is specified in the src attribute.</p>
-
-  <p>The style attribute is used to specify the styling of an element,
-    like color, font, size etc.</p>
-
-  <p title="Tooltip">
-    Here, a title attribute is added to the &lt;p&gt; element.<br>
-    The value of the title attribute will be displayed as a tooltip
-    when you mouse over the paragraph.</p>
-
-  <button>This is a Button sample.</button>
-
-  <p>&lt;br&gt; is an empty element without a closing tag
-    (the &lt;br&gt; tag defines a line break)</p>
-  <p>&lt;hr&gt; tag defines a thematic break in an HTML page,
-    and is most often displayed as a horizontal rule.<br>
-    The <span style="color: red;"><b>&lt;hr&gt;</b></span> element is
-    used to separate content (or define a change) in an HTML page</p>
-  <hr>
-
-  <h2>HTML Formatting Elements</h2>
-  <ul>
-    <li><b>&lt;b&gt; - Bold text</b>
-    <li><strong>&lt;strong&gt; - Important text</strong>
-    <li><i>&lt;i&gt; - Italic text</i>
-    <li><em>&lt;em&gt; - Emphasized text</em>
-    <li><mark>&lt;mark&gt; - Marked text</mark>
-    <li><small>&lt;small&gt; - Small text</small>
-    <li><del>&lt;del&gt; - Deleted text</del>
-    <li><ins>&lt;ins&gt; - Inserted text</ins>
-    <li><sub>&lt;sub&gt; - Subscript text</sub>
-    <li><sup>&lt;sup&gt; - Superscript text</sup>
-  </ul>
-  <hr>
-
-  <h2>HTML Quotation and Citation Elements</h2>
-  <p>
-    The HTML <b>&lt;q&gt;</b> element defines a short quotation.<br>
-    Browsers usually insert quotation marks around the <b>&lt;q&gt;</b>
-    element as follows.<br>
-    WWF's goal is to:
-    <q style="color: blue;">Build a future where people live in harmony with nature.</q>
-  </p>
-
-  <p>The HTML <mark style="background-color: powderblue;">
-      &lt;blockquote&gt;</mark> element defines
-    a section that is quoted from another source.<br>
-    Browsers usually indent <mark style="background-color: powderblue;">
-      &lt;blockquote&gt;</mark> elements.</p>
-  <blockquote cite="https://dapro379.github.io/">
-    The <b>cite attribute</b> does not render as anything special
-    in any of the major browsers,
-    but it can be used by search engines
-    to get more information about the quotation.
-  </blockquote>
-
-  <p>The HTML <b>&lt;abbr&gt;</b> element defines an abbreviation or an acronym.<br>
-    Marking abbreviations can give useful information to browsers,
-    translation systems and search-engines.</p>
-  <p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
-
-  <p>The HTML <b>&lt;address&gt;</b> element
-    defines contact information (author/owner) of a document or an article.<br>
-    The <b>&lt;address&gt;</b> element is usually displayed in italic.
-    Most browsers will add a line break before and after the element.</p>
-  <ul>
-    <li>address 태그는 소유자 또는 작성자의 연락처를 나타내는 태그입니다.</li>
-    <li>body 태그 안에 있으면 문서의 소유자 또는 작성자의 연락처를 나타냅니다.</li>
-    <li>article 태그 안에 있으면 기사의 소유자 또는 작성자의 연락처를 나타냅니다.</li>
-    <li>기본 모양은 기울임꼴입니다.</li>
-  </ul>
-  <address>
-    TEL : 82-11-000-0000-0000<br>
-    <a href="mailto:dapro379@korea.co.kr">E-Mail : dapro379@korea.co.kr</a><br>
-    Address : Seoul, Korea<br>
-  </address>
-
-  <p>The HTML <b>&lt;cite&gt;</b> element defines the title of a work.<br>
-    Browsers usually display <b>&lt;cite&gt;</b> elements in italic.</p>
-  <p><cite>The Scream</cite> by Edvard Munch. Painted in 1893.</p>
-
-  <p>The HTML <b>&lt;bdo&gt;</b> element defines bi-directional override.<br>
-    The <b>&lt;bdo&gt;</b> element is used
-    to override the current text direction.</p>
-  <p><bdo dir="rtl">이 문장은 오른쪽에서 왼쪽으로 표시 됩니다.</bdo><br>
-  <bdo dir="rtl">This text will be written from right to left</bdo></p>
-  <hr>
-
+  이 사이트는 합리적인 관계형 데이터베이스 모델을 만들기 위하여
+  필자가 생각하는 분야별 관계형 데이터베이스 모델을 제시하는 사이트 입니다.
 </body>
-
 </html>
