첫번째 주제 안내

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-  이 사이트는 합리적인 관계형 데이터베이스 모델을 만들기 위하여
-  필자가 생각하는 분야별 관계형 데이터베이스 모델을 제시하는 사이트 입니다.
+  <h1>사이트의 목적</h1>
+  <p>이 사이트는 합리적인 관계형 데이터베이스 모델을 만들기 위하여,
+    필자가 생각하는 분야별 관계형 데이터베이스 모델을 제시하는 사이트 입니다.</p>
+  <p>첫번째 주제는 모든 시스템에 가장 기본적으로 적용되는
+    사용자 및 권한에 관한 내용으로 빠른 시일안에 찾아 뵙겠습니다.</p>
 </body>
 </html>
