--- a/w3schools.html
+++ b/w3schools.html
@@ -5,24 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>dapro379.github.io</title>
-  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400" rel="stylesheet">
-  <style>
-    body {
-      font-family: "Nanum Gothic", d2coding,
-        Menlo, Consolas, DejaVu Sans Mono, monospace;
-      /* font-size: 20px;
-      line-height: 40px;
-      margin-left: 40px;
-      background-color: powderblue; */
-    }
-
-    /* address 태그 브라우저 기본값 */
-    address {
-      display: block;
-      font-style: italic;
-    }
-  </style>
+  <title>Document</title>
 </head>
 
 <body>
@@ -128,11 +111,6 @@
     <li>article 태그 안에 있으면 기사의 소유자 또는 작성자의 연락처를 나타냅니다.</li>
     <li>기본 모양은 기울임꼴입니다.</li>
   </ul>
-  <address>
-    TEL : 82-11-000-0000-0000<br>
-    <a href="mailto:dapro379@korea.co.kr">E-Mail : dapro379@korea.co.kr</a><br>
-    Address : Seoul, Korea<br>
-  </address>
 
   <p>The HTML <b>&lt;cite&gt;</b> element defines the title of a work.<br>
     Browsers usually display <b>&lt;cite&gt;</b> elements in italic.</p>
