--- a/index.html
+++ b/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>dapro379.github.io</title>
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400"
+    rel="stylesheet">
+  <style>
+    body {
+      font-family: "Nanum Gothic", d2coding,
+        Menlo, Consolas, DejaVu Sans Mono, monospace;
+      line-height: 28px;
+      background-color: cornsilk;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      margin-left: 40px;
+      margin-right: 40px;
+    }
+    /* address 태그 브라우저 기본값 */
+    address {
+      display: block;
+      font-style: italic;
+    }
+  </style>
+
 </head>
+
 <body>
   <h1>사이트의 목적</h1>
-  <p>이 사이트는 합리적인 관계형 데이터베이스 모델을 만들기 위하여,
-    필자가 생각하는 분야별 관계형 데이터베이스 모델을 제시하는 사이트 입니다.</p>
+  <p>이 사이트는 합리적인 관계형 데이터 모델을 만들기 위하여,
+    필자가 생각하는 분야별 관계형 데이터 모델을 제시하는 사이트 입니다.</p>
+  <br>
+
+  <h2>사용자별 권한 관리</h2>
   <p>첫번째 주제는 모든 시스템에 가장 기본적으로 적용되는
-    사용자 및 권한에 관한 내용으로 빠른 시일안에 찾아 뵙겠습니다.</p>
+    사용자별 권한관리 모델입니다.</p>
+  <p>예시 모델은 이클립스 플러그인 프로그램인 ER Master로 작성 되었습니다.<br>
+    <a href="files/사용자별권한관리_v0.1.erm">
+      사용자별권한관리_v0.1.erm 다운로드</a>
+  </p>
+  <img src="images/사용자별권한관리_v0.1.png"
+    title="사용자별 권한관리 논리 Entity Relationship Diagram"
+    alt="사용자별 권한관리 논리 Entity Relationship Diagram"
+    width="858" height="688">
+  <p>설명은 나중에 ^^</p>
+  <br>
+
+  <hr>
+  <address>
+    <a href="mailto:dapro379@naver.com">E-Mail : dapro379@naver.com</a><br>
+  </address>
+
 </body>
+
 </html>
