--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
     h1, h2, h3, h4, h5, h6 {
       padding-top: 14px;
     }
+    a {
+      text-decoration: none;
+    }
     /* address 태그 브라우저 기본값 */
-    address {
+    /* address {
       display: block;
       font-style: italic;
-    }
+    } */
   </style>
 
 </head>
@@ -31,19 +34,19 @@
 <body>
   <h1>사이트의 목적</h1>
   <p>이 사이트는 합리적인 관계형 데이터 모델을 만들기 위하여,
-    필자가 생각하는 분야별 관계형 데이터 모델을 제시하는 사이트 입니다.</p>
-  <!-- <br> -->
+    필자가 생각하는 분야별 관계형 데이터 모델링 사례를 제시하는 사이트 입니다.<br>
+    제시하는 모델은 가장 보편적인 개체-관계 모델링 기법인
+    개체-관계 다이어그램(<abbr title="Entity Relationship Diagram">ERD</abbr>)으로
+    표기하였으며, 이클립스 플러그인 프로그램인 ER Master로 작성 하였습니다.</p>
 
   <h2>사용자별 권한 관리</h2>
   <p>첫번째 주제는 모든 시스템에 가장 기본적으로 적용되는
-    사용자별 권한관리 모델입니다.</p>
-  <p>예시 모델은 이클립스 플러그인 프로그램인 ER Master로 작성 되었습니다.<br>
+    사용자별 권한관리 모델입니다.<br>
     <a href="files/사용자별권한관리_v0.1.erm">
       사용자별권한관리_v0.1.erm 다운로드</a></p>
   <img src="images/사용자별권한관리_v0.1.png"
     title="사용자별 권한관리 논리 Entity Relationship Diagram"
-    alt="사용자별 권한관리 논리 Entity Relationship Diagram"
-    width="858" height="688">
+    alt="사용자별 권한관리 논리 Entity Relationship Diagram">
   <p>설명은 나중에 ^^</p>
 
   <hr>
