--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>dapro379.github.io</title>
-  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400"
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap"
     rel="stylesheet">
   <style>
     body {
-      font-family: "Nanum Gothic", d2coding,
-        Menlo, Consolas, DejaVu Sans Mono, monospace;
+      font-family: 'Nanum Gothic', sans-serif;
       line-height: 28px; background-color: cornsilk;
       margin-top: 20px; margin-bottom: 20px;
       margin-left: 40px; margin-right: 40px;
