styles.css create

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>dapro379.github.io</title>
   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
   <style>
     body {
       font-family: 'Nanum Gothic', sans-serif;
@@ -15,17 +16,6 @@
       margin-top: 20px; margin-bottom: 20px;
       margin-left: 40px; margin-right: 40px;
     }
-    h1, h2, h3, h4, h5, h6 {
-      padding-top: 14px;
-    }
-    a {
-      text-decoration: none;
-    }
-    /* address 태그 브라우저 기본값 */
-    /* address {
-      display: block;
-      font-style: italic;
-    } */
   </style>
 
 </head>
