--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <h2>사용자별 권한 관리</h2>
   <p>첫번째 주제는 모든 시스템에 가장 기본적으로 적용되는
     사용자별 권한관리 모델입니다.<br>
-    <a href="files/사용자별권한관리_v0.1.erm">
+    <a href="files/사용자별권한관리_v0.1.erm" target="_blank">
       사용자별권한관리_v0.1.erm 다운로드</a></p>
   <img src="images/사용자별권한관리_v0.1.png"
     style="width: 800px; height: 600px;"
