--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <a href="files/사용자별권한관리_v0.1.erm" target="_blank">
       사용자별권한관리_v0.1.erm 다운로드</a></p>
   <img src="images/사용자별권한관리_v0.1.png"
-    style="width: 800px; height: 600px;"
+    <!-- style="width: 800px; height: 600px;" -->
     title="사용자별 권한관리 논리 Entity Relationship Diagram"
     alt="사용자별 권한관리 논리 Entity Relationship Diagram">
   <p>위의 모델에 공감하는 분도, 고개를 갸웃 하는 분도
