--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>dapro379.github.io</title>
-  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <style>
-    #p01 {
-      color: blue;
-      font-weight: bold;
-    }
-    p.p01 {
-      color: red;
+    #Ⅰ {
+      color: black;
       font-weight: bold;
     }
   </style>
@@ -23,20 +21,27 @@
 </head>
 
 <body>
-  <h1>사이트의 목적</h1>
+  <button id="top"
+    onclick="document.location = 'https://www.w3schools.com/html/html_images.asp'">
+    w3schools.com</button>
+  <h1 id="Ⅰ"><span style="font-family: 'Nanum Myeongjo', sans-serif;">Ⅰ.</span>
+    사이트의 목적</h1>
   <p>이 사이트는 합리적인 관계형 데이터 모델을 만들기 위하여,
     필자가 생각하는 분야별 관계형 데이터 모델링 사례를 제시하는 사이트 입니다.<br>
-    제시하는 모델은 가장 보편적인 개체-관계 모델링 기법인
-    개체-관계 다이어그램(<abbr title="Entity Relationship Diagram">ERD</abbr>)으로
-    표기하였으며, 이클립스 플러그인 프로그램인 ER Master로 작성 하였습니다.</p>
+    제시하는 모델은 가장 보편적인 개체-관계 모델링 기법인 개체-관계 다이어그램
+    <emp>(<abbr title="Entity Relationship Diagram">ERD</abbr>)</emp>으로
+    표기하였으며, 이클립스 플러그인
+    <a href="http://ermaster.sourceforge.net/"><strong>ER Master</strong></a>
+    프로그램으로 작성 하였습니다.</p>
+    <!-- 이유는 알 수 없으나 <emp> attribute 속성은 제대로 반영 되지 않으므로
+    강조를 하기 위해서는 <b> 혹은 <strong> 사용 -->
 
-  <h2>사용자별 권한 관리</h2>
+  <h2 id="1">1. 사용자별 권한 관리</h2>
   <p>첫번째 주제는 모든 시스템에 가장 기본적으로 적용되는
     사용자별 권한관리 모델입니다.<br>
     <a href="files/사용자별권한관리_v0.1.erm" target="_blank">
-      사용자별권한관리_v0.1.erm 다운로드</a></p>
+      <i>사용자별권한관리_v0.1.erm 다운로드</i></a></p>
   <img src="images/사용자별권한관리_v0.1.png"
-    <!-- style="width: 800px; height: 600px;" -->
     title="사용자별 권한관리 논리 Entity Relationship Diagram"
     alt="사용자별 권한관리 논리 Entity Relationship Diagram">
   <p>위의 모델에 공감하는 분도, 고개를 갸웃 하는 분도
@@ -44,13 +49,28 @@
     지금부터 이슈가 될만한 사항에 대해 설펴보고
     왜 위와 같이 설계 하였는지에 대해 설명하겠습니다.</p>
   <hr>
+
   <!-- id attribute : define a specific style for one special element -->
-  <p id="p01">왜 프로그램 단위로 권한을 부여하였을까?</p>
-  <p class="p01">왜 프로그램 단위로 권한을 부여하였을까?</p>
+  <p class="agenda">왜 로그인ID를 기본키로 지정하지 않았을까?</p>
+  <p>사용자 테이블 로그인ID는 Unique 인덱스 속성을 가져야 합니다.
+    따라서 로그인ID를 기본키로 정의하면 시스템이 관리하여야 하는 인덱스도 줄어들고
+    구조 또한 매우 간단하고 명료할 것입니다.
+    헌데 왜 예시 모델은 <mark>로그인ID</mark>와는 별도로 <mark>사용자ID</mark>를
+    <i><b><ins>기본키로 정의</ins></b></i> 함으로써
+    굳이 두개의 Unique 인덱스를 관리하도록 설계하였을까요?</p>
+  <hr>
+
+  <!-- class attribute : define a style for special types of elements -->
+  <p class="agenda">왜 프로그램 단위로 권한을 부여하였을까?</p>
   <p>모델을 보면 역할별로 프로그램 및 기능에 대한 권한을 설정하고,
     사용자별로 해당 사용자가 가질 수 있는 역할을 부여하고 있음에도 불구하고
-    실질적인 권한은 사용자별로 프로그램 및 기능에 대한 권한을 설정하였습니다.</p>
-
+    왜 실질적인 권한은 사용자별로 프로그램 및 기능에 대헤 권한을 설정하였을까요?</p>
+  <hr>
+  <a href="#top">Top</a><br>
+  <a href="#Ⅰ">
+    <span style="font-family: 'Nanum Myeongjo', sans-serif;">Ⅰ.</span>
+    사이트의 목적</a><br>
+  <span class="indent"></span><a href="#1">1. 사용자별 권한 관리</pre></a><br>
   <hr>
   <address>
     <a href="mailto:dapro379@naver.com">E-Mail : dapro379@naver.com</a><br>
