오라클 원격접속

--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
     사이트의 목적</a><br>
   <span class="indent"></span><a href="#1">1. 사용자별 권한 관리</pre></a><br>
   <hr>
+
+  <h3>참고자료</h3>
+  <p>
+    <a href="윈도우오라클원격접속.html">원도우용 오라클 데이터베이스 원격접속 허용</a>
+  </p>
+
   <address>
     <a href="mailto:dapro379@naver.com">E-Mail : dapro379@naver.com</a><br>
   </address>
