--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <span class="indent"></span><a href="#1">1. 사용자별 권한 관리</pre></a><br>
   <hr>
 
-  <h3>참고자료</h3>
+  <p style="font-weight: bold; font-size: 20px;">참고자료</p>
   <p>
     <a href="윈도우오라클원격접속.html">원도우용 오라클 데이터베이스 원격접속 허용</a>
   </p>
